Fix container width and alignment

--- a/Task 1/styles.css
+++ b/Task 1/styles.css
@@ -17,16 +17,20 @@ body {
 }
 
 main {
-  padding: 2rem;
+  padding: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  display: flex;
+  align-items: flex-start;
 }
 
 section {
   display: flex;
-  width: 100%;
-  margin: 2rem 0;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 80%;
+  padding: 2rem 0;
 }
 
 .container {
@@ -56,15 +60,17 @@ section {
 
 .details__wrapper {
   display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
   flex-wrap: wrap;
-  /* width: 100%; */
+  width: 100%;
 }
 
 .details__card {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 50ch;
+  max-width: 60ch;
   flex: 1 0 50%;
   border-bottom: 2px solid var(--white-text);
 }
@@ -81,7 +87,7 @@ section {
   align-items: left;
   text-align: left;
   justify-content: space-between;
-  max-width: 50ch;
+  max-width: 60ch;
   flex: 1 0 50%;
   margin: 1rem 0;
 }
